--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <title>Intel Bot - Octoblu</title>
-    
-    <script src="//cdn.octoblu.com/js/meshblu/latest/meshblu.bundle.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
   </head>
   <body>
     <div id='app'>
     </div>
+    <!-- <script src="//cdn.octoblu.com/js/meshblu/latest/meshblu.bundle.js"></script> -->
+    <script src="/meshblu.js"></script>
     <script src="/dist/bundle.js"></script>
   </body>
 </html>
